//protoc --js_out=import_style=commonjs,binary:../generated --ts_out=../generated *.proto
syntax = "proto3";

//package go_protos;

//option go_package="./go_protos";

// message definition
message TxBase {
  bytes Hash = 1; //本交易hash,不参与区块hash,只用来保存
  uint64  Type =2;  //交易类型，默认0=挖矿所得，没有输入;1=普通转账到地址交易
  uint64 Vin_total =3;  //输入交易数量
  repeated Vin Vin =4;  //交易输入
  uint64 Vout_total  =5; //输出交易数量
  repeated Vout Vout =6;    //交易输出
  uint64 Gas =7;  //交易手续费，此字段不参与hash
  uint64  LockHeight =8;  //本交易锁定在小于等于这个高度的块中，超过这个高度，块将不被打包到区块中
  bytes  Payload =9;  //备注信息
  bytes BlockHash =10;  //本交易属于的区块hash，不参与区块hash，只用来保存
  uint64 GasUsed =11; //交易使用的手续费，此字段不参与交易hash
}

message Vin{
  bytes  Puk =1;  //公钥
  bytes sign =2;  //对上一个交易签名，是对整个签名(若只对输出签名，当地址和金额一样时，签名输相同)
  bytes Nonce =3; //
}

message Vout{
  uint64  Value =1;   //输出金额 = 实际金额 * 100000000
  bytes Address =2; //钱包地址
  uint64 FrozenHeight =3; //冻结高度。小于等于这个冻结高度，未花费的交易余额不能使用
  bytes Domain =4;  //域名
  uint64 DomainType =5; //域名类型
}